@@ -20,6 +20,7 @@
     <File name="./SuposIcon.cs" subtype="Code" buildaction="Compile" />
     <File name="./ChangeLog" subtype="Code" buildaction="Nothing" />
     <File name="./SuposTax.cs" subtype="Code" buildaction="Compile" />
+    <File name="./SuposProduct.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
