@@ -1,3 +1,7 @@
+2007-10-25  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 
+
+	Tax Category and Product management terminated
+
 2007-10-21  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 
 
 	Taxes management finished
